Change name and description

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-CI= npm run build
-REACT_APP_GAME_NAME=Reactle
-REACT_APP_GAME_DESCRIPTION=A daily word puzzle
+CI="npm run build"
+REACT_APP_GAME_NAME="Anna's Birthday Wordle"
+REACT_APP_GAME_DESCRIPTION="a clue that leads to treasure"
 REACT_APP_LOCALE_STRING=
