Add imoji to title

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 CI="npm run build"
-REACT_APP_GAME_NAME="Lil Birthday Wordle"
+REACT_APP_GAME_NAME="Lil Birthday Wordle 🥳"
 REACT_APP_GAME_DESCRIPTION="a clue that leads to treasure"
 REACT_APP_LOCALE_STRING=
